# APF-SEB-Demo

./: README.md  agent.md  index.html  memory.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codegraph/: codegraph.db  codegraph.db-shm  codegraph.db-wal
.github/workflows/: release.yml
src/: App.tsx  sensor-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  main.rs  profile.rs  serial_stream.rs
src/components/: AppSidebar.tsx  DragWindowRegion.tsx  ForceHistoryCard.tsx  SensorReadout.tsx  SettingsPanel.tsx  UpdateButton.tsx  loading-screen.tsx
src/components/ui/: card.tsx  dropdown-menu.tsx
src/contexts/: DataCaptureContext.tsx  SensorStreamContext.tsx
src/helpers/: theme_helpers.ts  window_helpers.ts
src/hooks/: useViewportSize.ts
src/layouts/: BaseLayout.tsx
src/shared/: capture-types.ts  sensor-metadata.ts  serial-types.ts
src/styles/: global.css  loading-screen.css
