[package]
name = "apf-seb-demo"
version = "0.2.1"
description = "APF-SEB force sensor demo"
authors = ["Tobias Koehler"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7"
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
